# pets-configurator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  rust.yml
sample_pet/: vimrc
sample_pet/config/alacritty/: alacritty.toml
sample_pet/config/ghostty/: config
sample_pet/config/nvim/: .petsfile
sample_pet/docker/: docker-compose.yml
sample_pet/git/: gitconfig
sample_pet/i3/: config
sample_pet/shell/: flake8  tmux.conf  zshrc
sample_pet/ssh/: config  sshd_config  user_ssh_config
sample_pet/sudo/: sudoers
sample_pet/systemd/: backup.service  backup.timer
src/: actions.rs  commands.rs  lock.rs  main.rs  package_manager.rs  pet_files.rs  planner.rs  summary.rs  validator.rs
src/actions/: action.rs  cause.rs  errors.rs  package.rs  package_manager.rs  planner.rs
src/commands/: apply.rs  check.rs  clean_backups.rs  list.rs  mod.rs  plan.rs
src/pet_files/: condition.rs  destination.rs  directory_walker.rs  mode.rs  parser.rs  pet_file.rs
