[package]
name = "pets-configurator"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "A configuration management system for Pets, not Cattle"
authors = ["butlerx@notthe.cloud"]
readme = "README.md"
repository = "https://github.com/butlerx/pets-configurator"
keywords = ["linux", "configuration", "config-management", "pets", "cattle"]
categories = ["config"]

[[bin]]
name = "pets"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
home-dir = "0.1"
log = "0.4"
merkle_hash = { version = "3.7.0", features = ["sha"] }
sha2 = "0.10"
thiserror = "2.0"
users = "0.11"
walkdir = "2"

[dev-dependencies]
tempfile = "3.14"
