[package]
name         = "pets-configurator"
version      = "0.5.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT"
description  = "A configuration management system for Pets, not Cattle"
authors      = ["butlerx@notthe.cloud"]
readme       = "README.md"
repository   = "https://github.com/butlerx/pets-configurator"
keywords     = ["cattle", "config-management", "configuration", "linux", "pets"]
categories   = ["config"]

[[bin]]
name = "pets"
path = "src/main.rs"

[dependencies]
clap          = { version = "4.0", features = ["derive", "env"] }
clap_complete = "4.4"
colored       = "3.1"
env_logger    = "0.11"
hostname      = "0.4"
log           = "0.4"
merkle_hash   = { version = "3.7", features = ["sha"] }
sha2          = "0.11"
similar       = "3.1"
thiserror     = "2.0"
uzers         = "0.12.2"
walkdir       = "2"

[dev-dependencies]
tempfile = "3.14"
